--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -42,6 +42,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.14",
+    "@types/jest-axe": "^3.5.9",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -53,6 +54,7 @@
     "eslint-config-next": "^14.2.32",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.4.31",
     "typescript": "^5.9.2"
