fix: resolve card creation GraphQL errors and enable visual card rendering (NEX-200)
Fixed multiple GraphQL schema and validation issues preventing card creation:
- Updated GraphQL schema enums from uppercase to lowercase (TEXT -> text)
- Fixed CardValidator contentValidationByType keys to use lowercase
- Corrected Z position constraint to stay within 0-1000 range
- Added valid default content for each card type to pass validation
- Fixed database column mapping from position_z to z_index in CardService
- Updated Card interface to use ownerId instead of createdBy throughout
- Integrated Zustand cardStore with GraphQL card creation for immediate rendering
- Added card transformation from backend GraphQL format to frontend discriminated union

Technical changes:
- GraphQL mutations now successfully create cards and return valid responses
- Cards appear immediately on canvas after creation via cardStore.addCard()
- Apollo cache updates work alongside Zustand store for real-time UI updates
- Comprehensive logging added to track card creation pipeline
- Fixed enum case conversion between GraphQL (uppercase) and validation (lowercase)

All direct card creation actions (Text, Image, Link, Code) now work correctly.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test:backend": "cd backend && npm test",
     "test:frontend": "cd clients/web && npm test",
     "test": "npm run test:backend && npm run test:frontend",
+    "test-watch:backend": "cd backend && npm run test:watch",
+    "test-watch:frontend": "cd clients/web && npm run test:watch",
+    "test-watch": "npm run test-watch:backend && npm run test-watch:frontend",
     "lint:backend": "cd backend && npm run lint",
     "lint:frontend": "cd clients/web && npm run lint",
     "lint": "npm run lint:backend && npm run lint:frontend",
