--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -20,6 +20,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@types/dompurify": "^3.0.5",
+    "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
     "clsx": "^2.0.0",
     "dompurify": "^3.2.7",
@@ -27,6 +28,7 @@
     "framer-motion": "^12.23.12",
     "graphql": "^16.8.1",
     "konva": "^9.3.22",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lz-string": "^1.5.0",
     "next": "^14.2.32",
