--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -19,6 +19,10 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/pm": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
     "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
