--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -19,13 +19,20 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@tiptap/extension-blockquote": "^3.6.5",
     "@tiptap/extension-bold": "^3.6.5",
     "@tiptap/extension-bubble-menu": "^3.6.5",
+    "@tiptap/extension-bullet-list": "^3.6.5",
     "@tiptap/extension-code": "^3.6.5",
+    "@tiptap/extension-code-block": "^3.6.5",
     "@tiptap/extension-italic": "^3.6.5",
     "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-list-item": "^3.6.5",
+    "@tiptap/extension-ordered-list": "^3.6.5",
     "@tiptap/extension-placeholder": "^3.6.5",
     "@tiptap/extension-strike": "^3.6.5",
+    "@tiptap/extension-task-item": "^3.6.5",
+    "@tiptap/extension-task-list": "^3.6.5",
     "@tiptap/extension-underline": "^3.6.5",
     "@tiptap/pm": "^3.6.5",
     "@tiptap/react": "^3.6.5",
