--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -25,6 +25,8 @@
     "@tiptap/extension-bullet-list": "^3.6.5",
     "@tiptap/extension-code": "^3.6.5",
     "@tiptap/extension-code-block": "^3.6.5",
+    "@tiptap/extension-code-block-lowlight": "^3.6.5",
+    "@tiptap/extension-horizontal-rule": "^3.6.5",
     "@tiptap/extension-italic": "^3.6.5",
     "@tiptap/extension-link": "^3.6.5",
     "@tiptap/extension-list-item": "^3.6.5",
@@ -48,6 +50,7 @@
     "konva": "^9.3.22",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "lowlight": "^3.3.0",
     "lz-string": "^1.5.0",
     "next": "^14.2.32",
     "react": "^18.2.0",
